--- a/05-week5.Rmd
+++ b/05-week5.Rmd
@@ -47,15 +47,15 @@ As a default, R will install all the dependencies for a package when we install 
 
 Why are we telling you this? Well you should always check if you have a package, before installing it. And I wanted to share with you some neat code from a Stackoverflow discussion (if you are not yet familiar with Stackoverflow you have not been Google-ing your error messages enough) [here](https://stackoverflow.com/questions/4090169/elegant-way-to-check-for-missing-packages-and-install-them) to do this. We'll comment it a bit, so you can follow along what it does **but you don't have to if you don't want to**. This is just an extra. 
 
-So as a first step, you have to assign a list of all the packages you have to check to an object. Let's say I tell you that today we will be using the following packaes: "sp", "rgdal", "classInt", "RColorBrewer", "ggplot2", "hexbin", "ggmap", "XML", and "dplyr". Then you can add these to an object called `libs`, using the `c()` function: 
+So as a first step, you have to assign a list of all the packages you have to check to an object. Let's say I tell you that today we will be using the following packaes: "sp",  "classInt", "RColorBrewer", "ggplot2", "hexbin", "ggmap", "XML", and "dplyr". Then you can add these to an object called `libs`, using the `c()` function: 
 
 ```{r}
-libs <- c("sp", "rgdal", "classInt", "RColorBrewer", "ggplot2", "hexbin", "ggmap", "XML", "dplyr")
+libs <- c("sp",  "classInt", "RColorBrewer", "ggplot2", "hexbin", "ggmap", "XML", "dplyr")
 ```
 
 Now you can run the below bit of code, and you will see in the console an output of what is and isn't installed, as well as install the packages that are not!
 
-```{r}
+```{r, eval = FALSE}
 for (x in libs) {
     # Check if the package is installed
     if (!(x %in% rownames(installed.packages()))) {
@@ -187,6 +187,7 @@ We can observe that the dispersion narrows significantly and that there are fewe
 Instead of shrinking to the global relative risk, we can shrink to a relative rate based on the neighbours of each county. Shrinking to the global risk ignores the spatial dimension of the phenomenon being mapped out and may mask existing heterogeneity. If instead of shrinking to a global risk, we shrink to a local rate, we may be able to take unobserved heterogeneity into account. @Marshall_1991 proposed a local smoother estimator in which the crude rate is shrunk towards a local, "neighbourhood", rate. To compute this, we need the list of neighbours that surround each county (we will discuss this code in Chapter 11, so for now just trust we are computing the rate of the areas that surround each country):
 
 ```{r, message=FALSE, warning=FALSE}
+ncovr_sp <- as(ncovr, "Spatial")
 w_nb <- poly2nb(ncovr, row.names=ncovr_sp$FIPSNO)
 eb2 <- EBlocal(ncovr$HC60, ncovr$PO60, w_nb)
 ncovr$HR60EBSL <- eb2$est * 100000
