--- a/02-week2.Rmd
+++ b/02-week2.Rmd
@@ -145,13 +145,6 @@ Or, if you know the path to your file, you can code it in there, within quotatio
 crimes <- read_csv("data/2019-06-greater-manchester-street.csv")
 ```
 
-Or, you can download it from the a website where we keep the data with the following code:
-```{r, eval=FALSE}
-# save URL into an object
-urlfile <- "https://raw.githubusercontent.com/eonk/cm_book/main/data/2019-06-greater-manchester-street.csv"
-crimes <- read_csv(url(urlfile))
-```
-
 You might notice that the object `crimes` has appeared in your work environment window. It will tell you how many observations (rows - and incidentally the number of recorded crimes in June 2019 within the GMP jurisdiction) and how many variables (columns) your data has.
 
 Let's have a look at the crimes dataframe with the `View()` function. This will open the data browser in RStudio
@@ -316,73 +309,187 @@ Let's take it one step at the time.
 
 Essentially the philosophy behind this is that all graphics are made up of layers. The package `ggplot2` is based on the grammar of graphics, the idea that you can build every graph from the same few components: a data set, a set of geoms—visual marks that represent data points, and a coordinate system.
 
-Take this example (all taken from *Wickham, H. (2010). A layered grammar of graphics. Journal of Computational and Graphical Statistics, 19(1), 3-28.*)
 
-You have a table such as: 
 
-![](img/table.png)
+Let's take it one step at time. Essentially, the philosophy behind this is that all graphics are made up of layers. You can build every graph from the same few components: a dataset, a set of geoms visual marks that represent data points, and a coordinate system. Take this example from our crimes dataframe. You have a table such as: 
+
+```{r, echo = FALSE, message = FALSE, warning=FALSE}
+library(dplyr)
+
+df <- crimes %>% 
+  filter(crime_type %in% c("Robbery", "Shoplifting", "Theft from the person")) %>% 
+  group_by(crime_type) %>% 
+  count()
+  
+print(df)
+```
 
 You then want to plot this. To do so, you want to create a plot that combines the following layers: 
 
-![](img/layers.png)
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=3, fig.width=6, fig.cap = 'Layers of ggplot', fig.alt='Three panes showing different components of a plot. The first pane shows the column geometry, the second pane shows the axes, values along them, and their labels "Crime type" versus "Number of Crimes", and the third pane shows the title "Frequency of crime types", and a border.'}
+library(ggplot2)
+# create three separate plots to illustrate the layers
+p1 <- ggplot(df, aes(x = crime_type, y = n)) + 
+  geom_bar(stat = "identity") + 
+  theme_void()
+
+p2 <- ggplot(df, aes(x = gsub(" from the person", "",crime_type), y = n)) + 
+  theme_minimal() + 
+  theme(axis.text.x = element_text(angle = 15, hjust = 1)) + 
+  xlab("Crime type") + 
+  ylab("Number of crimes")
+
+p3 <- ggplot(df, aes(x = crime_type, y = n)) + 
+  theme_void() + 
+  labs(title = "Freq. of crime types") + 
+  theme(panel.border = element_rect(colour = "black", fill=NA, size=1))
+
+gridExtra::grid.arrange(p1, p2, p3, nrow = 1)
+
+
+```
 
 This will result in a final plot: 
 
-![](img/combined.png)
+```{r, echo = FALSE, message=FALSE, warning=FALSE, fig.cap='Final plot', fig.height=3, fig.alt='The completed bar plot "Frequency of crime types", combining the previous three layers into a single image.'}
 
-Taking our crime data as an example, we would build up our plot as follows: 
+ggplot(df, aes(x = gsub(" from the person", "",crime_type), y = n)) + 
+  geom_bar(stat = "identity") + 
+  theme_minimal() + 
+  theme(axis.text.x = element_text(angle = 15, hjust = 1), 
+        panel.border = element_rect(colour = "black", fill=NA, size=1)) + 
+  labs(title = "Frequency of crime types") + 
+  xlab("Crime type") + 
+  ylab("Number of crimes")
+
+```
+
+
+Taking our crime data as an example, we would build up our plot as follows. First let's create a small illustrative dataset of only the crimes of "Robbery", "Shoplifting", and "Theft from the person". 
+
+```{r, message = FALSE, warning=FALSE}
+
+library(dplyr)
+
+df <- crimes %>% 
+  filter(crime_type %in% c("Robbery","Shoplifting", "Theft from the person")) %>% 
+  group_by(crime_type) %>% 
+  count() 
+  
+df
+```
 
 Load ggplot2 package
 
-```{r}
+```{r, eval=FALSE}}
 library(ggplot2)
 ```
 
-Data: 
-```{r}
-ggplot(crimes, aes(x = crime_type))
+
+Now let us add the layers to our ggplot object. First, the data layer: 
+
+```{r, fig.cap='Data layer', fig.height=3, fig.alt='A grid background, with horizontal axis "crime_type" with notches denoted "Robbery, "Shoplifting", and "Theft from the person", and vertical axis "n", ranging from five hundred to fifteen hundred, with numbers denoted at intervals of two hundred and fifty.'}
+
+ggplot(df, aes(x = crime_type, y = n))
+
 ```
 
-Geometry: 
-```{r}
-ggplot(crimes, aes(x = crime_type)) + 
-  geom_bar()
+
+Then add the geometry (in this case, `geom_col()`): 
+
+
+```{r, fig.cap='Geometry layer', fig.height=3, fig.alt='The previous grid, now containing rectangular bars denoting the values corresponding to the crime types. The "n" axis now starts at zero, and the height of the bars is just under five hundred for "Robbery", fifteen hundred for "Shoplifting", and seven hundred and fifty for "Theft from the person".'}
+
+ggplot(df, aes(x = crime_type, y = n)) + 
+  geom_col()
 ```
 
-Aesthetics:
-```{r}
-ggplot(crimes, aes(x = crime_type, fill = last_outcome_category)) + 
-  geom_bar()
+Then our annotations: 
+
+```{r, fig.cap='Annotations layer', fig.height=3, fig.alt='The previous plot, now with the title "Frequency of crime types", and the axes labeled as "Crime type" and "Number of crimes".'}
+
+ggplot(df, aes(x = crime_type, y = n)) + 
+  geom_col() + 
+  labs(title = "Frequency of crime types") + 
+  xlab("Crime type") + 
+  ylab("Number of crimes")
+  
 ```
 
-And then you could add any facets (for example if we had more than one month of data) or any statistics (for example error bars) with facet and stats layers. One more thing I do want to show is tidying up your chart, you can add theme and clean up your labels and titles and colour scheme. 
+We can also specify our themes, by using a custom theme such as `theme_minimal()`, and by adding our own specifications within an additional `theme()` function: 
 
-```{r}
-ggplot(crimes, aes(x = crime_type, fill = last_outcome_category)) + 
-  geom_bar() + 
-  coord_flip() + 
+```{r, fig.cap='Customise themes', fig.height=3, fig.alt='The previous plot, with the background shading altered, and a black border.'}
+
+ggplot(df, aes(x = crime_type, y = n)) + 
+  geom_col() + 
+  labs(title = "Frequency of crime types") + 
+  xlab("Crime type") + 
+  ylab("Number of crimes") + 
   theme_minimal() + 
-  xlab("Crime Type") + 
-  ylab("Number of cases") + 
-  scale_fill_brewer(type = "qual", palette = 3, name = "Outcome")
+  theme(axis.text.x = element_text(angle = 15, hjust = 1), 
+        panel.border = element_rect(colour = "black", fill=NA, size=1))
+  
 ```
 
-This is not the greatest graph you'll ever see, but it illustrates the process. Do read up on ggplot2 for example in Hadley Wickham's book R4DS [chapter on data visualisation](https://r4ds.had.co.nz/data-visualisation.html). 
+We can add further specifications within the `aes()` (aesthetics) function, where we add additional layers from our data, to represent even more information in our charts, for example the outcomes for each crime. 
+
+```{r, fig.cap='Additional layers', fig.height=3, fig.alt='The previous graph has been squished horizontally and moved left, and the bars are now divided into colours vertically. The right side contains the title "last_outcome_category", as well as a legend for the colours, the most prominent of which are "Investigation complete; no suspect identified", "Status update unavailable", and "Unable to prosecute suspect".'}
+
+# create new dataframe (df) including last_outcome_category variable
+
+df <- crimes %>% 
+  filter(crime_type %in% c("Robbery", "Shoplifting", "Theft from the person"), 
+         last_outcome_category %in% df$last_outcome_category[1:5]) %>% 
+  group_by(crime_type, last_outcome_category) %>% 
+  count() 
+
+# plot including new variable with fill= parameter in aes() function
+
+ggplot(df, aes(x = crime_type, y = n, fill = last_outcome_category)) + 
+  geom_col() + 
+  labs(title = "Frequency of crime types") + 
+  xlab("Crime type") + 
+  ylab("Number of crimes") + 
+  theme_minimal() + 
+  theme(axis.text.x = element_text(angle = 15, hjust = 1), 
+        panel.border = element_rect(colour = "black", fill=NA,  size=1))
+```
+
+
+We can be explicit about the colours we want to use with the function `scale_fill_brewer()`, which we can also use to rename our legend. Don't worry too much at this point about where the palette comes from; later in the module we will discuss colour in more detail. 
+
+```{r, fig.cap='Customise colour', fig.height=3, fig.alt='The previous graph with colours now has more easily distinguishable colours, and the legend has the title "Outcome".'}
+
+ggplot(df, aes(x = crime_type,  y = n, fill = last_outcome_category)) + 
+  geom_col() + 
+  labs(title = "Frequency of crime types") + 
+  xlab("Crime type") + 
+  ylab("Number of crimes") + 
+  theme_minimal() + 
+  theme(axis.text.x = element_text(angle = 15, hjust = 1), 
+        panel.border = element_rect(colour = "black", fill=NA, size=1)) + 
+  scale_fill_brewer(type = "qual", palette = 3, name = "Outcome")
+
+```
+
+There are many more options. While this here is not the greatest graph you'll ever see, it illustrates the process of building up your graphics the ggplot way. Do read up on `ggplot2` for example in @Wickham_2017. In later chapters, we will talk more about visualisation, colour choice, and more!
 
 So how can we use this for spatial data? We can use the `geom_sf()` function to do so. 
 
 #### Activity 5: Mapping our points
 
-Using geom_sf is slightly different to other geometries, for example how we used `geom_bar()` above. First we initiate the plot with the `ggplot()` function but don't include the data in there. Instead, it is in the geometry where we add the data. And second we don't need to specify the mapping of x and y. Since this is in the geometry column of our spatial object. Like so:
+Using `geom_sf` is slightly different to other geometries, for example how we used `geom_bar()` above. First we initiate the plot with the `ggplot()` function but don't include the data in there. Instead, it is in the geometry where we add the data. And second we don't need to specify the mapping of x and y. Since this is in the geometry column of our spatial object. Like so:
 
 ```{r}
 ggplot() + 
-  geom_sf(data = crimes_sf)
+  geom_sf(data = crimes_sf) + 
+  theme_minimal() 
+  
 ```
 
 And here we have a map of each point in our data set, each recorded crime in June 2019 in Greater Manchester. 
 
-Would you call this a map though? While it is presenting spatial data, there is not a lot of meaning being communicated. Point maps generally can be messy and their uses are specific to certain situations and cases, usually when you have fewer points, but here, these points are especially devoid of any meaning, as they are floating in a graph grid. SO let's give it a basemap. 
+Would you call this a map though? While it is presenting spatial data, there is not a lot of meaning being communicated. Point maps generally can be messy and their uses are specific to certain situations and cases, usually when you have fewer points, but here, these points are especially devoid of any meaning, as they are floating in a graph grid. So let's give it a basemap. 
 
 We can do this by adding a layer to our graph object. Specifically we will use the `annotation_map_tile()` from the `ggspatial` package. This provides us with a static Open Street Map layer behind our data, giving it (some) more context. 
 
@@ -421,7 +528,7 @@ Anyway let's leave out points for now, and move on to how we might map our lines
 
 ### Mapping data by joining it to sf objects
 
-What about our other two columnds, location, and LSOAs? Well to put these on the map, we need a geometry representation of them. We will learn in this section where you may find these, how to download them, turn them into sf objects, and how to link your data to them to be able to map them. 
+What about our other two columns, location, and LSOAs? Well to put these on the map, we need a geometry representation of them. We will learn in this section where you may find these, how to download them, turn them into sf objects, and how to link your data to them to be able to map them. 
 
 #### Activity 6: Finding shapefiles
 
@@ -506,7 +613,7 @@ You should end up with a folder called "BoundaryData". Have a look at its conten
 
 So you can see immediately that there are some documentations around the usage of this shapefile, in the readme and the terms and conditions. Have a look at these as they will contain information about how you can use this map. For example, all your maps will have to mention where you got all the data from. So since you got this boundary data from the UKDS, you will have to note the following: 
 
-"Contains National Statistics data © Crown copyright and database right [year]
+> "Contains National Statistics data © Crown copyright and database right [year]
     Contains OS data © Crown copyright [and database right] (year)"
 
 You can read more about this in the terms and conditions document. 
@@ -521,13 +628,6 @@ But then you will also notice that there are 4 files with the same name "england
 Sometimes there might be more files associated with your shapefile as well, but we will not cover them here. So unlike when you work with spreadsheets and data in tabular form, which typically is just all included in one file; when you work with spatial data, you have to live with the required information living in separate files that need to be stored together. So, being tidy and organised is even more important when you carry out projects that involve spatial data. Please do remember the suggestions we provided last week as to how to organise your RStudio project directories.
 
 #### Activity 7: Reading shapefiles into R
-
-<!-- ### **HOMEWORK 2** -->
-
-<!-- Read Section 2.1 of the Geocomputation book linked above. Answer the following questions: -->
-<!-- 1. What are some strengths/advantages of the sf package? -->
-<!-- 2. What code do you need to transform a sf object into a sp object. -->
-<!-- 3  What is simply a sf object? -->
  
 To read in your data, you will need to know the path to where you have saved it. Ideally this will be in your data folder in your project directory. 
 
@@ -644,21 +744,35 @@ So we've already identified that both our crimes data, and the spatial data cont
 
 ![](img/fn2187.png)
 
-**You need a unique identifier to be present** for each row in all the data sets that you wish to join. This is how R knows what values belong to what row! What you are doing is matching each value from one table to the next, using this unique identified column, that exists in both tables. For example, let's say we have two data sets from some people in Hawkins, Indiana. In one data set we collected information about their age. In another one, we collected information about their hair colour. If we collected some information that is unique to each observation, and this is the *same* in both sets of data, for example their names, then we can link them up, based on this information.  Something like this: 
+**You need a unique identifier to be present** for each row in all the data sets that you wish to join. This is how R knows what values belong to what row! What you are doing is matching each value from one table to the next, using this unique identified column, that exists in both tables. For example, let's say we have two data sets from some people in Hawkins, Indiana. In one data set we collected information about their age. In another one, we collected information about their hair colour. If we collected some information that is unique to each observation, and this is the *same* in both sets of data, for example their names, then we can link them up, based on this information.   Something like this: 
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.cap='Two dataframes with common unique identifier', fig.alt='Two tables side by side. The first has columns for name and age, and lists "Barb" as sixteen, "Steve" as sixteen, and "Mike" as thirteen. The second has columns for name and hair colour, and lists "Barb" as "Red", "Steve" as "Brown", and "Mike" as "Black".'}
+library(grid)
+library(gridExtra)
+
+t1 <- data.frame(name = c("Barb", "Steve", "Mike"), 
+                  age = c(16, 16, 13))
+
+t2 <- data.frame(name = c("Barb", "Steve", "Mike"), 
+                  hair_colour = c("Red", "Brown", "Black"))
 
 
-![](img/merge_logic_1.png)
+grid.arrange(tableGrob(t1), tableGrob(t2), nrow = 1)
 
-
+```
 
 And by doing so, we produce a final table that contains all values, lined up *correctly* for each individual observation, like this: 
 
+```{r, echo=FALSE, warning=FALSE, message=FALSE, fig.cap='Joined dataframe', fig.alt='One table with three columns: name, age, and hair colour. The first row contains "Barb", with age sixteen, and a hair colour of red. The second, "Steve", sixteen, and brown, while the third "Mike", thirteen, and black.' }
 
-![](img/merge_logic_2.png)
+t3 <- left_join(t1, t2)
 
-This is all we are doing, when merging tables, is we are making use that we line up the correct value for all the variables, for all our observations. 
+grid.arrange(tableGrob(t3))
 
-Why are we using *left* join though? There is a [whole family of join functions as part of dplyr](http://stat545.com/bit001_dplyr-cheatsheet.html) which join data sets. There is also a right_join, and an inner_join and an outer_join and a full_join. But here we use left join, because that way we keep all the rows in x (the left-hand side dataframe), and join to it all the matched columns in y (the right-hand side dataframe). 
+```
+
+This is all we are doing, when merging tables: joining the two data sets using a common column. Why are we using *left* join though? There is a whole family of join functions as part of dplyr which join datasets. There is also a `right_join()`, and an `inner_join()` and an `outer_join()` and a `full_join()`. But here we use `left_join()`, because that way we keep all the rows in $x$ (the left-hand side dataframe), and join to it all the matched columns in $y$ (the right-hand side dataframe). 
+
 
 So let's join the crimes data to the spatial data, using left_join():
 
@@ -668,7 +782,13 @@ We have to tell left_join what are the dataframes we want to join, as well as th
 manchester_lsoa <- left_join(manchester_lsoa, crimes_per_lsoa, by = c("code"="lsoa_code"))
 ```
 
-Now if you have a look at the data again, you will see that the column of number of crimes (n) has been added on. 
+Now if you have a look at the data again, you will see that the column of number of crimes (`count`) has been added on. You may not want to have to go through this process all the time that you want to work with this data. One thing you could do is to save the "manchester_lsoa" object as a physical file in your machine. You can use the `st_write()` function from the `sf` package to do this. If we want to write into a shapefile format, we would do as shown below. Make sure you save this file, for we will come back to it in subsequent weeks.
+
+```{r, eval=FALSE}
+st_write(manchester_lsoa, "data/BoundaryData/manchester_crime_lsoa.shp")
+```
+
+*Note: if you get an error which says the layer already exists, this means there is already a file with this name in that location. You can add the parameter `append = FALSE` to overwrite this file, or give it a slightly different name.* 
 
 #### Activity 10: Mapping our data at polygon level
 
@@ -683,27 +803,30 @@ geom_sf(data = manchester_lsoa)
 
 Well now, since we have the column (variable) for number of crimes here, we can use that to share the polygons based on how many crimes there are in each LSOA. We can do this by specifying the `fill=` parameter of the `geom_sf` function. 
 
-```{r}
+```{r, fig.cap='Number of crimes in Manchester by LSOA', fig.alt="A plot of all the boundaries of Manchester's Lower Layer Super Output Areas, placed on a grey grid. To the right, labeled 'count', is a gradient from dark blue to light blue accompanies numbers from zero to over six hundred. Each LSOA in the plot is shaded by a colour on this gradient. Most of the plot is darker shades of blue, corresponding to lower numbers, but there are lighter areas near the centre of Manchester. The axes denote latitudes and longitudes as before."}
+
 ggplot() + 
 geom_sf(data = manchester_lsoa, aes(fill = count))
+
 ```
 
-We can add a basemap, and adjust the colour scheme, and even the opacity to see under our shape files. 
+Just like we did with the ggplot bar charts we created earlier, we can adjust the opacity of our thematic map, with the `alpha =` parameter, add a basemap, with the function `annotation_map_tile()` and adjust the colour scheme, with the `scale_fill_gradient2()` function.  
 
-```{r}
+```{r, message=FALSE, fig.cap='Number of crimes by LSOA with adjusted parameters', fig.alt="The previous plot overlaid on a map of Manchester. The gradient has been inverted, with lighter colours denoting lower number of crimes, and darker blue more. The label of the gradient is now 'Number of crimes'."}
+
 ggplot() + 
   annotation_map_tile() +  # add basemap
-geom_sf(data = manchester_lsoa, aes(fill = count), alpha = 0.7) + # alpha sets the opacity
-  scale_fill_gradient2(name ="Number of crimes") #use scale_fill_gradient2() for a different palette and name the variable on the legend
+geom_sf(data = manchester_lsoa, 
+        aes(fill = count), 
+        alpha = 0.7) + # alpha sets the opacity
+  #use scale_fill_gradient2() for a different palette 
+  # and name the variable on the legend
+  scale_fill_gradient2(name ="Number of crimes") 
+
 ```
 
+In subsequent weeks we will play around with other packages in R that you can use to produce this kind of maps. Gradually we will discuss the kind of choices you can make in order to select the adequate type of representation for the type of spatial data and question you have, and the aesthethic choices that are adequate depending on the purposes and medium in which you will publish your map. But for now, we can rejoice: here is our very first crime map of the course!
 
-<!-- And we can even add some interactivity! -->
-
-<!-- ```{r} -->
-<!-- tmap_mode("view") -->
-<!-- tmap_last() -->
-<!-- ``` -->
 
 ## Summary
 
